[gd_scene load_steps=4 format=3 uid="uid://7itpi66kgl12"]

[ext_resource type="Script" path="res://Scripts/buffs/triple_shot_buff.gd" id="1_j8no6"]
[ext_resource type="Texture2D" uid="uid://cqd2ey88yxaf1" path="res://Assets/Static/Buffs/buff_triple_shot.png" id="2_t0rny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iktaj"]

[node name="TripleShotBuff" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_j8no6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iktaj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t0rny")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
